# global-energy-map

./: .gitignore  .prettierignore  CLAUDE.md  README.md  eslint.config.mjs  main.py  package.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  tsconfig.json  vitest.config.ts
docs/: methodology.md
docs/superpowers/plans/: 2026-05-15-global-energy-map-phase-1.md  2026-05-15-global-energy-map-phase-2.md  2026-05-16-global-energy-map-phase-3.md
docs/superpowers/specs/: 2026-05-15-global-energy-map-design.md  2026-05-15-global-energy-map-phase-2-design.md  2026-05-16-global-energy-map-phase-3-design.md
public/data/: assets.parquet  catalog.json  chokepoint_route.parquet  countries.geojson  country_year_series.parquet  disruption_route.parquet  trade_flow.parquet
scripts/common/: iso3.py  secrets.py
scripts/ingest/: baci_2709.py  baci_2711.py  ei_statistical_review.py  gem_extraction.py  gem_gas_infra.py  gem_oil_infra.py  osm_refineries.py
scripts/transform/: build_assets.py  build_chokepoint_routing.py  build_country_year.py  build_disruption_routing.py  build_lng_terminals.py  build_pipelines.py  build_refineries.py  build_trade_flow.py
src/app/: page.tsx
src/app/about/: page.tsx
src/components/layers/: ExtractionPoints.tsx  LayerPanel.tsx  Legend.tsx  LngTerminalsLayer.tsx  PipelinesLayer.tsx  RefineriesLayer.tsx  ReservesChoropleth.tsx
src/components/map/: MapShell.tsx  style.ts
src/components/scenarios/: overlay.ts  (+3 more)
tests/e2e/: phase-1.spec.ts  phase-2.spec.ts  phase-3.spec.ts
tests/python/: test_iso3.py
tests/unit/: sanity.test.ts
(+23 files in other folders)
